Minor updates to about page and fixed ui divider spacing

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -47,6 +47,9 @@ i.icon
   top 1.4rem
   cursor pointer
 
+.ui.divider
+  margin 3rem 0 !important
+
 @media only screen and (min-width: $desktop-breakpoint) 
   #mobile_menu_toggle
     display none
